--- a/app/src/main/res/xml/activity_training_scene.xml
+++ b/app/src/main/res/xml/activity_training_scene.xml
@@ -2,15 +2,101 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ConstraintSet android:id="@+id/start">
-        <Constraint android:id="@+id/widget" />
+    <ConstraintSet android:id="@+id/start5">
+        <Constraint android:id="@+id/timer_text">
+            <CustomAttribute
+                app:attributeName="text"
+                app:customStringValue="5"/>
+        </Constraint>
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/start4">
+        <Constraint android:id="@+id/timer_text" >
+            <CustomAttribute
+                app:attributeName="text"
+                app:customStringValue="4"/>
+        </Constraint>
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/start3">
+        <Constraint android:id="@+id/timer_text">
+            <CustomAttribute
+                app:attributeName="text"
+                app:customStringValue="3"/>
+        </Constraint>
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/start2">
+        <Constraint android:id="@+id/timer_text" >
+            <CustomAttribute
+                app:attributeName="text"
+                app:customStringValue="2"/>
+        </Constraint>
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/start1">
+        <Constraint android:id="@+id/timer_text">
+            <CustomAttribute
+                app:attributeName="text"
+                app:customStringValue="1"/>
+        </Constraint>
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/start_go">
+        <Constraint android:id="@+id/timer_text" >
+            <CustomAttribute
+                app:attributeName="text"
+                app:customStringValue="GO!"/>
+        </Constraint>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
-        <Constraint android:id="@id/widget" />
+        <Constraint android:id="@+id/timer_text" >
+            <CustomAttribute
+                app:attributeName="text"
+                app:customStringValue=""/>
+        </Constraint>
     </ConstraintSet>
 
     <Transition
+        app:constraintSetEnd="@id/start4"
+        app:constraintSetStart="@+id/start5"
+        app:duration="1000"
+        app:autoTransition="animateToEnd">
+    </Transition>
+
+    <Transition
+        app:constraintSetEnd="@id/start3"
+        app:constraintSetStart="@+id/start4"
+        app:duration="1000"
+        app:autoTransition="animateToEnd">
+    </Transition>
+
+    <Transition
+        app:constraintSetEnd="@id/start2"
+        app:constraintSetStart="@+id/start3"
+        app:duration="1000"
+        app:autoTransition="animateToEnd">
+    </Transition>
+
+    <Transition
+        app:constraintSetEnd="@id/start1"
+        app:constraintSetStart="@+id/start2"
+        app:duration="1000"
+        app:autoTransition="animateToEnd">
+    </Transition>
+
+    <Transition
+        app:constraintSetEnd="@id/start_go"
+        app:constraintSetStart="@+id/start1"
+        app:duration="1000"
+        app:autoTransition="animateToEnd">
+    </Transition>
+
+    <Transition
         app:constraintSetEnd="@id/end"
-        app:constraintSetStart="@+id/start" />
+        app:constraintSetStart="@+id/start_go"
+        app:duration="1000"
+        app:autoTransition="animateToEnd">
+    </Transition>
 </MotionScene>
