--- a/app/src/main/res/xml/activity_training_scene.xml
+++ b/app/src/main/res/xml/activity_training_scene.xml
@@ -7,6 +7,16 @@
             <CustomAttribute
                 app:attributeName="text"
                 app:customStringValue="5"/>
+            <CustomAttribute
+                app:attributeName="textColor"
+                app:customColorValue="@color/orange"
+                />
+        </Constraint>
+
+        <Constraint android:id="@+id/progress_timer">
+            <CustomAttribute
+                app:attributeName="progress"
+                app:customIntegerValue="100"/>
         </Constraint>
     </ConstraintSet>
 
@@ -15,6 +25,15 @@
             <CustomAttribute
                 app:attributeName="text"
                 app:customStringValue="4"/>
+            <CustomAttribute
+                app:attributeName="textColor"
+                app:customColorValue="@color/gray"
+                />
+        </Constraint>
+        <Constraint android:id="@+id/progress_timer">
+            <CustomAttribute
+                app:attributeName="progress"
+                app:customIntegerValue="75"/>
         </Constraint>
     </ConstraintSet>
 
@@ -23,6 +42,15 @@
             <CustomAttribute
                 app:attributeName="text"
                 app:customStringValue="3"/>
+            <CustomAttribute
+                app:attributeName="textColor"
+                app:customColorValue="@color/teal_200"
+                />
+        </Constraint>
+        <Constraint android:id="@+id/progress_timer">
+            <CustomAttribute
+                app:attributeName="progress"
+                app:customIntegerValue="50"/>
         </Constraint>
     </ConstraintSet>
 
@@ -32,6 +60,11 @@
                 app:attributeName="text"
                 app:customStringValue="2"/>
         </Constraint>
+        <Constraint android:id="@+id/progress_timer">
+            <CustomAttribute
+                app:attributeName="progress"
+                app:customIntegerValue="25"/>
+        </Constraint>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/start1">
@@ -39,6 +72,11 @@
             <CustomAttribute
                 app:attributeName="text"
                 app:customStringValue="1"/>
+        </Constraint>
+        <Constraint android:id="@+id/progress_timer">
+            <CustomAttribute
+                app:attributeName="progress"
+                app:customIntegerValue="0"/>
         </Constraint>
     </ConstraintSet>
 
@@ -62,35 +100,40 @@
         app:constraintSetEnd="@id/start4"
         app:constraintSetStart="@+id/start5"
         app:duration="1000"
-        app:autoTransition="animateToEnd">
+        app:autoTransition="animateToEnd"
+        app:motionInterpolator="linear">
     </Transition>
 
     <Transition
         app:constraintSetEnd="@id/start3"
         app:constraintSetStart="@+id/start4"
         app:duration="1000"
-        app:autoTransition="animateToEnd">
+        app:autoTransition="animateToEnd"
+        app:motionInterpolator="linear">
     </Transition>
 
     <Transition
         app:constraintSetEnd="@id/start2"
         app:constraintSetStart="@+id/start3"
         app:duration="1000"
-        app:autoTransition="animateToEnd">
+        app:autoTransition="animateToEnd"
+        app:motionInterpolator="linear">
     </Transition>
 
     <Transition
         app:constraintSetEnd="@id/start1"
         app:constraintSetStart="@+id/start2"
         app:duration="1000"
-        app:autoTransition="animateToEnd">
+        app:autoTransition="animateToEnd"
+        app:motionInterpolator="linear">
     </Transition>
 
     <Transition
         app:constraintSetEnd="@id/start_go"
         app:constraintSetStart="@+id/start1"
         app:duration="1000"
-        app:autoTransition="animateToEnd">
+        app:autoTransition="animateToEnd"
+        app:motionInterpolator="linear">
     </Transition>
 
     <Transition
