--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -25,33 +25,29 @@
         android:text="@string/start2"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
-        android:id="@+id/motionlayout_timer"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        android:layout_marginTop="120dp"
-        app:layoutDescription="@xml/activity_training_scene"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_countword">
-
         <TextView
             android:id="@+id/timer_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="56sp"
+            android:text="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/textview_countword" />
 
-        <ProgressBar
+        <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/progress_timer"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:progress="0"
-            android:progressDrawable="@drawable/custom_circular_progress_bar5"
             android:layout_width="170dp"
-            android:layout_height="170dp"/>
+            android:layout_height="170dp"
+            app:indicatorSize="100dp"
+            android:progress="50"
+            app:trackCornerRadius="20dp"
+            app:trackThickness="8dp"
+            app:indicatorColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textview_countword" />
 
-    </androidx.constraintlayout.motion.widget.MotionLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
