--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -10,7 +10,6 @@
         android:id="@+id/count_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1 of 10"
         android:textSize="16sp"
         android:layout_marginTop="32dp"
         android:textColor="@color/dark_gray"
@@ -22,20 +21,22 @@
         android:id="@+id/meaning_word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="something"
         android:layout_marginTop="8dp"
         android:textSize="24sp"
         android:textColor="@color/dark"
+        android:paddingHorizontal="16dp"
+        android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@id/count_question"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/answer_1"
+        android:id="@+id/layout_answer_1"
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_marginTop="24dp"
         android:layout_marginHorizontal="16dp"
+        android:clickable="true"
         android:background="@drawable/round_background"
         app:layout_constraintTop_toBottomOf="@id/meaning_word"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +53,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
         <TextView
+            android:id="@+id/answer_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/dark"
@@ -65,13 +67,14 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/answer_2"
+        android:id="@+id/layout_answer_2"
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_marginTop="24dp"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/round_background"
-        app:layout_constraintTop_toBottomOf="@id/answer_1"
+        android:clickable="true"
+        app:layout_constraintTop_toBottomOf="@id/layout_answer_1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
         <TextView
@@ -86,6 +89,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
         <TextView
+            android:id="@+id/answer_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/dark"
@@ -99,13 +103,14 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/answer_3"
+        android:id="@+id/layout_answer_3"
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_marginTop="24dp"
         android:layout_marginHorizontal="16dp"
+        android:clickable="true"
         android:background="@drawable/round_background"
-        app:layout_constraintTop_toBottomOf="@id/answer_2"
+        app:layout_constraintTop_toBottomOf="@id/layout_answer_2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
         <TextView
@@ -120,6 +125,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
         <TextView
+            android:id="@+id/answer_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/dark"
