--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -60,7 +60,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="24dp"
             android:textSize="16sp"
-            android:text="example"
             app:layout_constraintStart_toEndOf="@id/number_1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -96,7 +95,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="24dp"
             android:textSize="16sp"
-            android:text="example"
             app:layout_constraintStart_toEndOf="@id/number_2"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -132,11 +130,20 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="24dp"
             android:textSize="16sp"
-            android:text="example"
             app:layout_constraintStart_toEndOf="@id/number_3"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/progress"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="32dp"
+        app:trackColor="@color/gray"
+        app:indicatorColor="@color/orange"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
